Finishing alacrity font selection

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -111,7 +111,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: DroidSansMono Nerd Font Mono
+    #family: DroidSansMono Nerd Font Mono
+    family: SourceCodePro
+
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -122,7 +124,8 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: monospace
+    #family: DroidSansMono Nerd Font Mono
+    family: SourceCodePro
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -133,7 +136,8 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: monospace
+    #family: DroidSansMono Nerd Font Mono
+    family: SourceCodePro
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -144,7 +148,8 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: monospace
+    #family: DroidSansMono Nerd Font Mono
+    family: SourceCodePro
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
