--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -4,5 +4,8 @@
     "coc-marketplace": ">=1.9.0",
     "coc-pyright": ">=1.1.284",
     "coc-snippets": ">=3.1.6"
-  }
+  },
+  "disabled": [],
+  "locked": [],
+  "lastUpdate": 1673882936188
 }
