--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -3,7 +3,13 @@
     "coc-clangd": ">=0.27.0",
     "coc-marketplace": ">=1.9.0",
     "coc-pyright": ">=1.1.284",
-    "coc-snippets": ">=3.1.6"
+    "coc-snippets": ">=3.1.6",
+    "coc-json": ">=1.8.0",
+    "coc-tsserver": ">=2.1.3",
+    "coc-cmake": ">=0.2.1",
+    "coc-html": ">=1.8.0",
+    "coc-markdownlint": ">=1.27.0",
+    "coc-sh": ">=0.7.0"
   },
   "disabled": [],
   "locked": [],
