--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,17 +1,17 @@
 {
   "dependencies": {
     "coc-clangd": ">=0.27.0",
-    "coc-marketplace": ">=1.9.0",
-    "coc-pyright": ">=1.1.284",
-    "coc-snippets": ">=3.1.6",
-    "coc-json": ">=1.8.0",
-    "coc-tsserver": ">=2.1.3",
     "coc-cmake": ">=0.2.1",
     "coc-html": ">=1.8.0",
+    "coc-json": ">=1.8.0",
     "coc-markdownlint": ">=1.27.0",
-    "coc-sh": ">=0.7.0"
+    "coc-marketplace": ">=1.9.0",
+    "coc-pyright": ">=1.1.293",
+    "coc-sh": ">=0.7.0",
+    "coc-snippets": ">=3.1.6",
+    "coc-tsserver": ">=2.1.3"
   },
   "disabled": [],
   "locked": [],
-  "lastUpdate": 1674218584760
+  "lastUpdate": 1675958880822
 }
